// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swipeable handles mouse events with trackMouse prop and fires correct props: Swipeable onSwiped trackMouse 1`] = `
Array [
  Array [
    Object {
      "absX": 100,
      "absY": 0,
      "deltaX": -100,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {},
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.5624999996816769,
    },
  ],
]
`;

exports[`Swipeable handles mouse events with trackMouse prop and fires correct props: Swipeable onSwiping trackMouse 1`] = `
Array [
  Array [
    Object {
      "absX": 25,
      "absY": 0,
      "deltaX": -25,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 125,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374825.199999963,
      },
      "first": true,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.592356689012699,
    },
  ],
  Array [
    Object {
      "absX": 50,
      "absY": 0,
      "deltaX": -50,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 150,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374841.3999999757,
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.5673981190353126,
    },
  ],
  Array [
    Object {
      "absX": 75,
      "absY": 0,
      "deltaX": -75,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 175,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374857.399999979,
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.565762004010972,
    },
  ],
  Array [
    Object {
      "absX": 100,
      "absY": 0,
      "deltaX": -100,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 200,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374873.499999987,
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.5624999996816769,
    },
  ],
]
`;

exports[`Swipeable handles touch events and fires correct props: Swipeable onSwiped trackTouch 1`] = `
Array [
  Array [
    Object {
      "absX": 0,
      "absY": 100,
      "deltaX": 0,
      "deltaY": -100,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "touches": Array [
          Object {
            "clientX": undefined,
            "clientY": undefined,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.8903591679142773,
    },
  ],
]
`;

exports[`Swipeable handles touch events and fires correct props: Swipeable onSwiping trackTouch 1`] = `
Array [
  Array [
    Object {
      "absX": 0,
      "absY": 25,
      "deltaX": 0,
      "deltaY": -25,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8100.999999966007,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 125,
          },
        ],
      },
      "first": true,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.0548523197963273,
    },
  ],
  Array [
    Object {
      "absX": 0,
      "absY": 50,
      "deltaX": 0,
      "deltaY": -50,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8116.899999964517,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 150,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.2626262620442454,
    },
  ],
  Array [
    Object {
      "absX": 0,
      "absY": 75,
      "deltaX": 0,
      "deltaY": -75,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8122.799999953713,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 175,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.6483516480817324,
    },
  ],
  Array [
    Object {
      "absX": 0,
      "absY": 100,
      "deltaX": 0,
      "deltaY": -100,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8130.199999955433,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 200,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.8903591679142773,
    },
  ],
]
`;

exports[`useSwipeable handles mouse events with trackMouse prop and fires correct props: useSwipeable onSwiped trackMouse 1`] = `
Array [
  Array [
    Object {
      "absX": 100,
      "absY": 0,
      "deltaX": -100,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {},
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.5624999996816769,
    },
  ],
]
`;

exports[`useSwipeable handles mouse events with trackMouse prop and fires correct props: useSwipeable onSwiping trackMouse 1`] = `
Array [
  Array [
    Object {
      "absX": 25,
      "absY": 0,
      "deltaX": -25,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 125,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374825.199999963,
      },
      "first": true,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.592356689012699,
    },
  ],
  Array [
    Object {
      "absX": 50,
      "absY": 0,
      "deltaX": -50,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 150,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374841.3999999757,
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.5673981190353126,
    },
  ],
  Array [
    Object {
      "absX": 75,
      "absY": 0,
      "deltaX": -75,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 175,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374857.399999979,
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.565762004010972,
    },
  ],
  Array [
    Object {
      "absX": 100,
      "absY": 0,
      "deltaX": -100,
      "deltaY": 0,
      "dir": "Right",
      "event": Object {
        "clientX": 200,
        "clientY": 100,
        "preventDefault": [MockFunction],
        "timeStamp": 1374873.499999987,
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.5624999996816769,
    },
  ],
]
`;

exports[`useSwipeable handles touch events and fires correct props: useSwipeable onSwiped trackTouch 1`] = `
Array [
  Array [
    Object {
      "absX": 0,
      "absY": 100,
      "deltaX": 0,
      "deltaY": -100,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "touches": Array [
          Object {
            "clientX": undefined,
            "clientY": undefined,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.8903591679142773,
    },
  ],
]
`;

exports[`useSwipeable handles touch events and fires correct props: useSwipeable onSwiping trackTouch 1`] = `
Array [
  Array [
    Object {
      "absX": 0,
      "absY": 25,
      "deltaX": 0,
      "deltaY": -25,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8100.999999966007,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 125,
          },
        ],
      },
      "first": true,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.0548523197963273,
    },
  ],
  Array [
    Object {
      "absX": 0,
      "absY": 50,
      "deltaX": 0,
      "deltaY": -50,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8116.899999964517,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 150,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.2626262620442454,
    },
  ],
  Array [
    Object {
      "absX": 0,
      "absY": 75,
      "deltaX": 0,
      "deltaY": -75,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8122.799999953713,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 175,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.6483516480817324,
    },
  ],
  Array [
    Object {
      "absX": 0,
      "absY": 100,
      "deltaX": 0,
      "deltaY": -100,
      "dir": "Down",
      "event": Object {
        "preventDefault": [Function],
        "timeStamp": 8130.199999955433,
        "touches": Array [
          Object {
            "clientX": 100,
            "clientY": 200,
          },
        ],
      },
      "first": false,
      "initial": Array [
        100,
        100,
      ],
      "velocity": 1.8903591679142773,
    },
  ],
]
`;
